@@ -9,4 +9,4 @@ Module Contents
 .. autoclass:: Cache
     :members: get, clear
 .. autoclass:: CacheManager
-    :members: region, cache
+    :members: region, region_invalidate, cache, invalidate
