@@ -27,12 +27,14 @@ def make_region_cached_func():
     return load
 
 def make_cached_func():
+    global _cache_obj
     cache = make_cache_obj()
 
     @cache.cache('loader')
     def load(person):
         now = datetime.now()
         return "Hi there %s, its currently %s" % (person, now)
+    _cache_obj = cache
     return load
 
 def test_decorators():
@@ -55,14 +57,14 @@ def check_decorator(func):
     result2 = func('Fred')
     assert result != result2
 
-def test_check_invalidate():
+def test_check_invalidate_region():
     func = make_region_cached_func()
     result = func('Fred')
     assert 'Fred' in result
     
     result2 = func('Fred')
     assert result == result2
-    _cache_obj.region_invalidate(None, func, 'region_loader', 'Fred')
+    _cache_obj.region_invalidate(func, None, 'region_loader', 'Fred')
     
     result3 = func('Fred')
     assert result3 != result2
@@ -71,5 +73,24 @@ def test_check_invalidate():
     assert result3 == result2
     
     # Invalidate a non-existent key
-    _cache_obj.region_invalidate(None, func, 'region_loader', 'Fredd')
+    _cache_obj.region_invalidate(func, None, 'region_loader', 'Fredd')
+    assert result3 == result2
+
+def test_check_invalidate():
+    func = make_cached_func()
+    result = func('Fred')
+    assert 'Fred' in result
+    
+    result2 = func('Fred')
+    assert result == result2
+    _cache_obj.invalidate(func, 'loader', 'Fred')
+    
+    result3 = func('Fred')
+    assert result3 != result2
+    
+    result2 = func('Fred')
+    assert result3 == result2
+    
+    # Invalidate a non-existent key
+    _cache_obj.invalidate(func, 'loader', 'Fredd')
     assert result3 == result2
